# outlookctl

./: .gitignore  CLAUDE.md  README.md  prd.md  pyproject.toml
docs/: index.html
evals/: README.md  eval_draft_reply.md  eval_refuse_send.md  eval_summarize.md
skills/outlook-email-automation/: SKILL.md
skills/outlook-email-automation/reference/: cli.md
src/outlookctl/: __init__.py  audit.py  cli.py  models.py  outlook_com.py  safety.py
tests/: __init__.py  test_calendar_models.py  test_models.py  test_safety.py
tools/: install_skill.py
